# pytorchOCR

./: .gitignore  requirement.txt  requirements.txt
bo/config/: model_config_bo.py
config/: det_DB_mobilev3.yaml  det_PSE_mobilev3.yaml  rec_CRNN_mobilev3_large_english_all.yaml  rec_CRNN_mobilev3_large_english_lmdb.yaml  rec_CRNN_mobilev3_small_english_all.yaml  rec_CRNN_mobilev3_small_english_lmdb.yaml  rec_CRNN_resnet34_english_lmdb.yaml  rec_CRNN_resnet_english.yaml  rec_CRNN_resnet_english_all.yaml
dataset/: train_data.cfg  validate_data.cfg
deploy/: Dockerfile  Dockerfile.train  sources.list
doc/md/: onnx_to_ncnn.md  文本检测训练文档.md  文本识别训练文档.md
examples/psenet/: CMakeLists.txt  main.cpp
onnx/: onnx-simple.sh
ptocr/dataloader/: data_reader.py
ptocr/dataloader/DetLoad/: DBProcess.py  MakeSegMap.py  PANProcess.py  PSEProcess.py  SASTProcess.py  __init__.py
ptocr/dataloader/RecLoad/: CRNNProcess.py
ptocr/postprocess/dbprocess/: Makefile  __init__.py
ptocr/postprocess/piexlmerge/: Makefile  __init__.py
ptocr/utils/: data_utils.py  transform_label.py  util_function.py
script/: pytorch_to_onnx.py
tools/: det_infer.py  det_sast.py  det_train.py  logger_utils.py  rec_train.py
tools/cal_rescall/: script.py
